{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 129,
  "lineage": "0e7dad3e-92e9-4537-bbc4-5fe5ce233f56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vm-1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09e973f123c32cf86",
            "arn": "arn:aws:ec2:us-east-1:313445758638:instance/i-05f7a87008f5c0448",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f7a87008f5c0448",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ans",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-006c042a468c0be7b"
              }
            ],
            "primary_network_interface_id": "eni-006c042a468c0be7b",
            "private_dns": "ip-172-31-17-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.23",
            "public_dns": "ec2-54-167-11-59.compute-1.amazonaws.com",
            "public_ip": "54.167.11.59",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:313445758638:key/83321b54-a740-4862-83e3-e4c133e81eee",
                "tags": {
                  "Name": "prometheus-server-root-volume"
                },
                "tags_all": {
                  "Name": "prometheus-server-root-volume"
                },
                "throughput": 125,
                "volume_id": "vol-02f9ab15cc00a9959",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028fefb11921d0801",
            "tags": {
              "Env": "dev",
              "Name": "prometheus-server",
              "Role": "prometheus",
              "Team": "devops"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "prometheus-server",
              "Role": "prometheus",
              "Team": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000aff1906e2a5953"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313445758638",
            "id": "i-05f7a87008f5c0448",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "vm-2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09e973f123c32cf86",
            "arn": "arn:aws:ec2:us-east-1:313445758638:instance/i-05e6e1a0a203f15fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e6e1a0a203f15fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ans",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05e6e971a5de5c53d"
              }
            ],
            "primary_network_interface_id": "eni-05e6e971a5de5c53d",
            "private_dns": "ip-172-31-26-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.140",
            "public_dns": "ec2-44-220-147-185.compute-1.amazonaws.com",
            "public_ip": "44.220.147.185",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:313445758638:key/83321b54-a740-4862-83e3-e4c133e81eee",
                "tags": {
                  "Name": "node-exporter1-root-volume"
                },
                "tags_all": {
                  "Name": "node-exporter1-root-volume"
                },
                "throughput": 125,
                "volume_id": "vol-0bceeb6f4f6cc71b6",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028fefb11921d0801",
            "tags": {
              "Env": "dev",
              "Name": "node-exporter1",
              "Role": "node_exporter",
              "Team": "devops"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "node-exporter1",
              "Role": "node_exporter",
              "Team": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000aff1906e2a5953"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313445758638",
            "id": "i-05e6e1a0a203f15fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313445758638:security-group/sg-000aff1906e2a5953",
            "description": "EC2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-000aff1906e2a5953",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "313445758638",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfe2f6a6aa95eab3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313445758638",
            "id": "sg-000aff1906e2a5953",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp_all_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3931687871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-000aff1906e2a5953",
            "security_group_rule_id": "sgr-08965d753b2ea8cd7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp_all_ports1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2270893010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-000aff1906e2a5953",
            "security_group_rule_id": "sgr-0c96f5d63124aa0d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    }
  ]
}